--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-#spring.jpa.hibernate.ddl-auto=create
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.url=jdbc:mysql://localhost/cinema?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
