--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 #spring.datasource.initialization-mode=always
 spring.servlet.multipart.enabled=true
+#error.whitelabel.enabled=false
+#server.error.whitelabel.enabled=false
