--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.ddl-auto=validate
-spring.datasource.url=jdbc:mysql://localhost/cinema?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost/cinema?serverTimezone=Europe/Kiev
 spring.datasource.username=root
 spring.datasource.password=root
 spring.mvc.view.prefix=/WEB-INF/views/
