--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.datasource.url=jdbc:mysql://localhost/cinema?serverTimezone=Europe/Kiev
+spring.datasource.url=jdbc:mysql://localhost/cinema?serverTimezone=Europe\
+  /Kiev
 spring.datasource.username=root
 spring.datasource.password=root
 spring.mvc.view.prefix=/WEB-INF/views/
